--- a/usrcrd/src/UserCard.css
+++ b/usrcrd/src/UserCard.css
@@ -4,20 +4,21 @@
 }
 
 .user-card {
-    width: 20%;
-    height: 30%;
+    width: 20%; 
     text-align: center;
     background-color: rgb(170, 211, 221);
     font-weight: 600;
     border-radius: 25px;
     padding: 1%;
     margin: 1%;
+    
     display: flex;
     flex-direction: column;
     box-shadow: 0 1px 6px -2px #000;
 }
 .user-photo {
-
+    height: 400px;
+    width: auto;
 }
 .user-link {
     text-decoration: none;
