--- a/usrcrd/src/index.css
+++ b/usrcrd/src/index.css
@@ -1,8 +1,10 @@
 html {
   margin: 2%;
+  background-color: white;
 }
 
 body {
+  background-color: antiquewhite;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
